--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -1,5 +1,31 @@
 page-home {
-  #direction-slider {
-    height: auto;
+  .directions {
+    &-navbar {
+      background-color: rgb(245, 69, 69);
+    }
+
+    &-slider {
+      height: 150px;
+    }
+
+    &-list {
+      margin: 0;
+      padding: 0;
+      list-style-type: none;
+
+      &__item {
+        display: flex;
+        justify-content: space-between;
+        flex-direction: row;
+        align-items: center;
+        padding: 0;
+        border-bottom: 1px solid white;
+        background-color: #ccc;
+
+        &__title {
+          margin-left: 30px;
+        }
+      }
+    }
   }
 }
