--- a/src/pages/lesson-add/lesson-add.scss
+++ b/src/pages/lesson-add/lesson-add.scss
@@ -1,14 +1,7 @@
 page-lesson-add {
   .lesson-create {
+    padding-top: 10px;
     width: 100%;
-
-    &-area {
-      width: 100%;
-      border: 0;
-      outline: 0;
-      background-color: #ededed;
-      resize: none;
-    }
   }
 
   .test-selector {
@@ -20,11 +13,11 @@ page-lesson-add {
       display: flex;
       justify-content: center;
       align-items: center;
+      box-shadow: $shadow;
     }
 
     &__create {
       font-size: 25px;
-      // font-weight: bold;
     }
   }
 }
