--- a/src/pages/question-add/question-add.scss
+++ b/src/pages/question-add/question-add.scss
@@ -1,3 +1,23 @@
 page-question-add {
+  .variants-selector {
+    padding-top: 10px;
+    &__item {
+      width: 50px;
+      height: 50px;
+      background-color: #ededed;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      box-shadow: $shadow;
+    }
 
+    &__create {
+      font-size: 25px;
+    }
+
+    &__variant {
+      margin-top: 10px;
+      width: 100%;
+    }
+  }
 }
