--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -48,6 +48,27 @@ $app-direction: ltr;
   }
 }
 
+textarea,
+input {
+  width: 100%;
+  padding: 10px;
+  border: 0;
+  outline: 0;
+  background-color: #ededed;
+  resize: none;
+  box-shadow: 0 1px 2px rgba(0, 0, 0, 0.2);
+}
+
+.button__item {
+  width: 50px;
+  height: 50px;
+  background-color: #ededed;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  box-shadow: 0 1px 2px rgba(0, 0, 0, 0.2);
+}
+
 // Named Color Variables
 // --------------------------------------------------
 // Named colors makes it easy to reuse colors on various components.
@@ -63,6 +84,8 @@ $colors: (
   light: #f4f4f4,
   dark: #222
 );
+
+$shadow: 0 1px 2px rgba(0, 0, 0, 0.2);
 
 // App iOS Variables
 // --------------------------------------------------
