--- a/src/pages/lesson/lesson.scss
+++ b/src/pages/lesson/lesson.scss
@@ -1,5 +1,10 @@
 page-lesson {
   .toolbar-content-md {
     display: flex;
+
   }
+}
+.lesson-text{
+  text-indent: 1.5em;
+  text-align: justify;
 }
