--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -68,7 +68,15 @@ input {
   align-items: center;
   box-shadow: 0 1px 2px rgba(0, 0, 0, 0.2);
 }
-
+*{
+  box-sizing: border-box;
+}
+@keyframes shadow {
+  from { opacity: 0;
+    transform: translateX(200px);}
+  to { opacity: 1;
+    transform: translateX(0);}
+}
 // Named Color Variables
 // --------------------------------------------------
 // Named colors makes it easy to reuse colors on various components.
