--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -39,6 +39,9 @@ page-home {
       &__item:nth-child(3){
         animation: shadow  1s  ease-in-out;
       }
+      &__item:nth-child(4){
+        animation: shadow  1.5s  ease-in-out;
+      }
     }
   }
 }
