--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -42,6 +42,9 @@ page-home {
       &__item:nth-child(4){
         animation: shadow  1.5s  ease-in-out;
       }
+      &__item:nth-child(5){
+        animation: shadow  1.8s  ease-in-out;
+      }
     }
   }
 }
