--- a/src/pages/test/test.scss
+++ b/src/pages/test/test.scss
@@ -56,16 +56,40 @@ page-test {
       justify-content: center;
       button{
         font-size: 2rem;
-        padding: 1rem 1rem 1rem 2rem;
-        background: none;
-        border: 1px solid #222222;
+        text-decoration: none;
+        outline: none;
+        display: inline-block;
+        margin: 10px 20px;
+        padding: 10px 30px;
         position: relative;
-        overflow: hidden;
+        border: 2px solid #bca72a;
+        color: #bca72a;
+        font-family: 'Montserrat', sans-serif;
+        background: none;
+        transition: .4s;
         ion-icon{
           transform: translateX(100px);
           transition: .7s;
           opacity: 0;
         }
+      }
+      button:after {
+        content: "";
+        position: absolute;
+        top: 0;
+        left: 0;
+        right: 0;
+        bottom: 0;
+        width: 100%;
+        height: 100%;
+        margin: auto;
+        border: 2px solid rgba(0,0,0,0);
+        transition: .4s;
+      }
+      button:hover:after {
+        border-color: #bca72a;
+        width: calc(100% - 10px);
+        height: calc(100% + 10px);
       }
       button:hover  ion-icon{
         transform: translateX(0);
