--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -96,7 +96,7 @@ input {
 // The "primary" color is the only required color in the map.
 
 $colors: (
-  primary: #488aff,
+  primary: #fee533,
   secondary: #32db64,
   danger: #f53d3d,
   light: #f4f4f4,
